Fixed a bug in ordering